--- a/package.json
+++ b/package.json
@@ -9,26 +9,54 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "8.4.1",
+    "@hookform/resolvers": "3.9.0",
+    "@kinde-oss/kinde-auth-nextjs": "2.3.6",
+    "@prisma/client": "5.17.0",
+    "@radix-ui/react-alert-dialog": "1.1.1",
+    "@radix-ui/react-aspect-ratio": "1.1.0",
+    "@radix-ui/react-avatar": "1.1.0",
+    "@radix-ui/react-dialog": "1.1.1",
+    "@radix-ui/react-dropdown-menu": "2.1.1",
     "@radix-ui/react-icons": "1.3.0",
+    "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-scroll-area": "1.1.0",
+    "@radix-ui/react-select": "2.1.1",
     "@radix-ui/react-slot": "1.1.0",
-    "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-toast": "1.2.1",
+    "@radix-ui/react-tooltip": "1.1.2",
+    "@supabase/supabase-js": "2.45.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
-    "lucide-react": "0.445.0",
-    "next": "14.2.13",
+    "copy-to-clipboard": "3.3.3",
+    "lodash.debounce": "4.0.8",
+    "lucide-react": "0.424.0",
+    "next": "14.2.3",
+    "next-safe-action": "7.4.3",
+    "prisma": "5.17.0",
     "react": "18",
     "react-dom": "18",
-    "tailwind-merge": "2.5.2",
-    "tailwindcss-animate": "1.0.7"
+    "react-hook-form": "7.52.2",
+    "react-intersection-observer": "9.13.0",
+    "react-spinners": "0.14.1",
+    "server-only": "0.0.1",
+    "slugify": "1.6.6",
+    "tailwind-merge": "2.4.0",
+    "tailwindcss-animate": "1.0.7",
+    "ts-pattern": "5.2.0",
+    "zod": "3.23.8"
   },
   "devDependencies": {
-    "@types/node": "20",
+    "@types/lodash.debounce": "4.0.9",
+    "@types/node": "22.1.0",
     "@types/react": "18",
     "@types/react-dom": "18",
+    "cuid": "3.0.0",
     "eslint": "8",
-    "eslint-config-next": "14.2.13",
+    "eslint-config-next": "14.2.3",
     "postcss": "8",
     "tailwindcss": "3.4.1",
+    "ts-node": "10.9.2",
     "typescript": "5"
   }
 }
