--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "format:db": "prisma format",
+    "build:db": "prisma generate",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
