--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "copy-to-clipboard": "3.3.3",
+    "jsonwebtoken": "9.0.2",
+    "jwks-rsa": "3.1.0",
     "lodash.debounce": "4.0.8",
     "lucide-react": "0.424.0",
     "next": "14.2.3",
